--- a/Robot Programming/in_class_code/.vscode/settings.json
+++ b/Robot Programming/in_class_code/.vscode/settings.json
@@ -14,6 +14,9 @@
         "random": "cpp",
         "string": "cpp",
         "unordered_map": "cpp",
-        "vector": "cpp"
+        "vector": "cpp",
+        "compare": "cpp",
+        "limits": "cpp",
+        "type_traits": "cpp"
     }
 }
