Add section on parametrized hypothesis space and fix matrix multiplication
Added a new section in the Machine Learning LaTeX source about parametrized and hyperparametrized hypothesis spaces. Fixed the matrix multiplication operator in MatD to return by value instead of reference, updated related header and main code to use correct dimensions and initialization. Also added a new node.h file in Robot Programming/in_class_code/08-10-2025.

--- a/Machine Learning/LatexSourceFile/.vscode/settings.json
+++ b/Machine Learning/LatexSourceFile/.vscode/settings.json
@@ -3,6 +3,7 @@
         "bioinformatics",
         "Farkas",
         "Hirsh",
+        "hyperparametrized",
         "iperpiani",
         "iperpiano",
         "l'iperpiano",
