--- a/Robot Programming/in_class_code/.vscode/settings.json
+++ b/Robot Programming/in_class_code/.vscode/settings.json
@@ -17,6 +17,7 @@
         "vector": "cpp",
         "compare": "cpp",
         "limits": "cpp",
-        "type_traits": "cpp"
+        "type_traits": "cpp",
+        "ostream": "cpp"
     }
 }
