--- a/Robot Programming/in_class_code/.vscode/settings.json
+++ b/Robot Programming/in_class_code/.vscode/settings.json
@@ -58,6 +58,11 @@
         "thread": "cpp",
         "cinttypes": "cpp",
         "typeinfo": "cpp",
-        "__nullptr": "cpp"
+        "__nullptr": "cpp",
+        "__bit_reference": "cpp",
+        "__functional_base": "cpp",
+        "__node_handle": "cpp",
+        "__memory": "cpp",
+        "ios": "cpp"
     }
 }
