DH frames ROB 1

--- a/Robotics 1/LatexSourceFile/.vscode/settings.json
+++ b/Robotics 1/LatexSourceFile/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "cSpell.words": [
+        "Denavit",
         "Farkas",
+        "Hartenberg",
         "Hirsh",
         "iperpiani",
         "iperpiano",
