ML e simulator of RP

--- a/Robot Programming/in_class_code/simulator/CMakeLists.txt
+++ b/Robot Programming/in_class_code/simulator/CMakeLists.txt
@@ -9,7 +9,9 @@ INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})
 add_library(stuff_library
             linalg.cpp
             grid.cpp
-            world_item.cpp)
+            world_item.cpp
+            laser_scanner.cpp
+            unicycle_robot.cpp)
 
 add_executable(linalg_main linalg_main.cpp)
 target_link_libraries(linalg_main
@@ -21,6 +23,22 @@ add_executable(grid_main
         grid_main.cpp)
 
 target_link_libraries(grid_main
+        stuff_library
+        ${OpenCV_LIBRARIES}
+)
+
+add_executable(laser_scanner_main
+        laser_scanner_main.cpp)
+
+target_link_libraries(laser_scanner_main
+        stuff_library
+        ${OpenCV_LIBRARIES}
+)
+
+add_executable(unicycle_main
+        unicycle_main.cpp)
+
+target_link_libraries(unicycle_main
         stuff_library
         ${OpenCV_LIBRARIES}
 )
