Add decomposition and cutset sections to AI notes
Expanded the ArtificialIntelligence.tex document with new sections on decomposition and cutsets in constraint networks, including definitions, theorems, and illustrative figures. Added three new images (australia_graph.png, australia_graph2.png, cutset.png) to support the new content. Updated spelling settings to include relevant terminology. In MachineLearning.tex, added a detailed section on kernel methods, kernelized models, normalization techniques, and kernelized SVMs, with corresponding updates to the spell checker.

--- a/Machine Learning/LatexSourceFile/.vscode/settings.json
+++ b/Machine Learning/LatexSourceFile/.vscode/settings.json
@@ -6,6 +6,7 @@
         "hyperparametrized",
         "iperpiani",
         "iperpiano",
+        "Kernelized",
         "l'iperpiano",
         "Tecnicalità",
         "uncomputable"
