--- a/Artificial intelligence/LatexSourceFile/.vscode/settings.json
+++ b/Artificial intelligence/LatexSourceFile/.vscode/settings.json
@@ -1,12 +1,16 @@
 {
     "cSpell.words": [
+        "bijective",
         "cutset",
         "Cutsets",
+        "DPLL",
         "Farkas",
         "Hirsh",
         "iperpiani",
         "iperpiano",
         "l'iperpiano",
-        "Tecnicalità"
+        "satisfiability",
+        "Tecnicalità",
+        "Unsatisfiability"
     ]
 }
