AI notes updated

--- a/Artificial intelligence/LatexSourceFile/.vscode/settings.json
+++ b/Artificial intelligence/LatexSourceFile/.vscode/settings.json
@@ -5,11 +5,15 @@
         "Cutsets",
         "DPLL",
         "Farkas",
+        "Graphplan",
         "Hirsh",
         "iperpiani",
         "iperpiano",
         "l'iperpiano",
+        "regressable",
         "satisfiability",
+        "subgoal",
+        "subgoals",
         "Tecnicalità",
         "Unsatisfiability"
     ]
