Finished last chapter

--- a/Artificial intelligence/LatexSourceFile/.vscode/settings.json
+++ b/Artificial intelligence/LatexSourceFile/.vscode/settings.json
@@ -10,6 +10,7 @@
         "iperpiani",
         "iperpiano",
         "l'iperpiano",
+        "overcounts",
         "regressable",
         "satisfiability",
         "subgoal",
