updated AI notes

--- a/Artificial intelligence/LatexSourceFile/.vscode/settings.json
+++ b/Artificial intelligence/LatexSourceFile/.vscode/settings.json
@@ -11,8 +11,10 @@
         "iperpiano",
         "l'iperpiano",
         "overcounts",
+        "Prenex",
         "regressable",
         "satisfiability",
+        "Skolem",
         "subgoal",
         "subgoals",
         "Tecnicalità",
